# outpost

./: .gitignore  CHANGELOG.md  CLAUDE_CODE_PROMPT.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: auth_issue.yml  bug_report.yml  config.yml  feature_request.yml  mcp_issue.yml
.github/workflows/: release.yml  triage.yml
docs/: elevator-pitch.md  permissions.md
src/outpost/: __init__.py  auth.py  cli.py  config.py  mcp_server.py  updater.py
src/outpost/api/: calendar.py  client.py  contacts.py  mail.py  tasks.py  teams.py
src/outpost/formatters/: __init__.py  contacts.py  json_fmt.py  mail.py  table.py  teams.py
src/outpost/utils/: dates.py
tests/: conftest.py  test_auth.py  test_auth_cli.py  test_cal_cli.py  test_calendar_api.py  test_client.py  test_config.py  test_contacts_api.py  test_contacts_cli.py  test_dates.py  test_error_handling.py  test_formatters.py  test_mail_api.py  test_mail_cli.py  test_mcp_remote.py  test_mcp_server.py  test_task_cli.py  test_tasks_api.py  test_teams_api.py  test_teams_cli.py  test_updater.py
